# WSv2

./: .gitignore  README.md  compose.yaml
artifacts/: timing_report_20260209_201934.json  timing_report_20260209_202037.json
docker/: Dockerfile
docs/: pattern_schema.md  workshop_notebook.md
host_agent/: README.md
host_agent/host_agent/: __main__.py  score_timeline.py  serial_repl.py  server.py  timing_telemetry.py
host_agent/host_agent/backends/: mock_backend.py  spike_ble_backend.py  spike_usb_backend.py
host_agent/host_agent/tools/: timing_bench.py
host_agent/tests/: test_score_batch_snippet.py
patterns/presets/: bounce_encoder.yaml  clock_tick.yaml  dance_basic.yaml  metronome_90.yaml  pulse_4.yaml  sweep_3s.yaml
ros2_ws/src/spike_workshop_hw/spike_workshop_hw/: http_client.py  hw_client_node.py
ros2_ws/src/spike_workshop_interfaces/: CMakeLists.txt
ros2_ws/src/spike_workshop_interfaces/srv/: RunCommand.srv
ros2_ws/src/spike_workshop_tools/: setup.py
ros2_ws/src/spike_workshop_ui_backend/: package.xml  setup.cfg  setup.py
ros2_ws/src/spike_workshop_ui_backend/launch/: ui_backend.launch.py
ros2_ws/src/spike_workshop_ui_backend/resource/: spike_workshop_ui_backend
ros2_ws/src/spike_workshop_ui_backend/spike_workshop_ui_backend/: __init__.py
scripts/: dev_launch.sh  dev_shell.sh  pattern_wizard.py  play_pattern.sh  run.sh  start_container.sh  start_host_agent_usb.sh
ui/pyscript/: index.html
ui/pyscript/css/: style.css
ui/pyscript/js/: ros_client.js  ui_handlers.js
ui/pyscript/py/: app.py  components.py  rosbridge.py  state.py
(+7 files in other folders)
